# scientisst-sense-api-python

./: .gitignore  404.html  Dockerfile  README.md  ReceiveAndPlot.py  index.html  main.py  mkdocs.yml  objects.inv  output.csv  plot_output.py  pyproject.toml  requirements.txt  scientisst.py  sense.py  setup.cfg  state.py
.github/workflows/: gh-pages.yml  publish-to-pypi.yml  publish-to-test-pypi.yml
docs/: index.md  installation.md
docs/css/: extra.css
docs/getting-started/: api.md  sense.md
docs/reference/: exceptions-reference.md  frame-reference.md  scientisst-reference.md  state-reference.md
getting-started/api/: index.html
getting-started/sense/: index.html
installation/: index.html
reference/exceptions-reference/: index.html
reference/frame-reference/: index.html
reference/scientisst-reference/: index.html
reference/state-reference/: index.html
scientisst/: __init__.py  constants.py  exceptions.py  frame.py  rt_plotter.py  scientisst.py  state.py
scientisst/esp_adc/: constants.py  esp_adc.py  lut_adc.py
search/: search_index.json
sense/: arg_parser.py  custom_script.py  device_picker.py  file_writer.py  lsl.py  stream_lsl.py  thread_builder.py  writer.py
sense_src/: arg_parser.py  custom_script.py  device_picker.py  file_writer.py  stream_lsl.py  thread_builder.py
