[metadata]
name = scientisst-sense
version = attr: scientisst.__version__
author = ScientISST
author_email = developer@scientisst.com
description = The ScientISST SENSE Python API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scientisst/scientisst-sense-api-python
project_urls =
    Bug Tracker = https://github.com/scientisst/scientisst-sense-api-python/issues
    Documentation = https://scientisst.github.io/scientisst-sense-api-python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
packages = find:
python_requires = >=3.6
py_modules =
    sense
install_requires =
    pyserial
    pylsl
    pydbus
    numpy
    matplotlib

[options.entry_points]
console_scripts =
    sense=sense:main

[options.packages.find]
where =
